--- a/public/partials/hosts-listing.ejs
+++ b/public/partials/hosts-listing.ejs
@@ -37,7 +37,7 @@ for (state in hostSummary) {
         var hostDisplay = '';
         if (hostCollapsed == 'down') { hostDisplay = 'display: none;' }
     %>
-    <table class="table table-hover table-bordered" style="<%= hostDisplay %>" id="<%= hostName %>">
+    <table class="table table-hover table-striped" style="<%= hostDisplay %>" id="<%= hostName %>">
         <tr>
             <th style="width: 50%;">Process Name</th>
             <th style="width: 10%;">State</th>
