--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,12 +1,16 @@
 <div class="header-container">
     <header class="header-wrapper clearfix">
         <h1 class="title">Nodervisor</h1>
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/settings">Settings</a></li>
-            </ul>
-        </nav>
+        <% if (typeof notLoggedIn == 'undefined') { %>
+	        <nav>
+	            <ul>
+	                <li><a href="/">Home</a></li>
+	                <li><a href="/hosts">Hosts</a></li>
+	                <li><a href="/users">Users</a></li>
+	                <li><a href="/logout">Logout</a></li>
+	            </ul>
+	        </nav>
+	    <% } %>
     </header>
 </div>
 <div class="container">
