--- a/public/partials/hosts-listing.ejs
+++ b/public/partials/hosts-listing.ejs
@@ -34,8 +34,13 @@ for (state in hostSummary) {
 <h4 ><%= hostName + ' ' + summaryLabel %></h4>
 <% if (!error) { %>
     <button type="button" data-table="<%= hostName %>" class="btn pull-right table-collapse" style="margin-top: -47px;"><i class="glyphicon glyphicon-collapse-<%= hostCollapsed %>"></i></button>
-    <button type="button" data-host="<%= hostName %>" data-action="restartAll" class="btn btn-warning btn-labeled pull-right super-action" style="margin-top: -47px; margin-right: 65px;"><span class="btn-label"><i class="glyphicon glyphicon-repeat"></i></span> Restart all</button>
     <%
+        if (role == 'Admin') {
+            %>
+                <button type="button" data-host="<%= hostName %>" data-action="restartAll" class="btn btn-warning btn-labeled pull-right super-action" style="margin-top: -47px; margin-right: 65px;"><span class="btn-label"><i class="glyphicon glyphicon-repeat"></i></span> Restart all</button>
+            <%
+        }
+
         var hostDisplay = '';
         if (hostCollapsed == 'down') { hostDisplay = 'display: none;' }
     %>
@@ -91,18 +96,20 @@ for (state in hostSummary) {
                 </td>
                 <td>
                     <%
-                        if (processes[i].statename == 'RUNNING') {
-                            %>
-                                <button type="button" class="btn btn-labeled btn-danger super-action" data-action="stop" data-process="<%= processes[i].name %>" data-host="<%= hostName %>"><span class="btn-label"><i class="glyphicon glyphicon-minus-sign"></i></span>Stop</button>
-                            <%
-                        } else if ((processes[i].statename == 'FATAL') || (processes[i].statename == 'STOPPED')) {
-                            %>
-                                <button type="button" class="btn btn-labeled btn-success super-action" data-action="start" data-process="<%= processes[i].name %>" data-host="<%= hostName %>"><span class="btn-label"><i class="glyphicon glyphicon-ok"></i></span>Start</button>
-                            <%
-                        } else {
-                            %>
-                                <button type="button" class="btn btn-labeled btn-info"><span class="btn-label"><i class="glyphicon glyphicon-refresh"></i></span>Updating</button>
-                            <%
+                        if (role == 'Admin') {
+                            if (processes[i].statename == 'RUNNING') {
+                                %>
+                                    <button type="button" class="btn btn-labeled btn-danger super-action" data-action="stop" data-process="<%= processes[i].name %>" data-host="<%= hostName %>"><span class="btn-label"><i class="glyphicon glyphicon-minus-sign"></i></span>Stop</button>
+                                <%
+                            } else if ((processes[i].statename == 'FATAL') || (processes[i].statename == 'STOPPED')) {
+                                %>
+                                    <button type="button" class="btn btn-labeled btn-success super-action" data-action="start" data-process="<%= processes[i].name %>" data-host="<%= hostName %>"><span class="btn-label"><i class="glyphicon glyphicon-ok"></i></span>Start</button>
+                                <%
+                            } else {
+                                %>
+                                    <button type="button" class="btn btn-labeled btn-info"><span class="btn-label"><i class="glyphicon glyphicon-refresh"></i></span>Updating</button>
+                                <%
+                            }
                         }
                     %>
                     <button type="button" class="btn btn-info process-info-btn"><i class="glyphicon glyphicon-info-sign"></i></button>
